@@ -1,3 +1,8 @@
+2011-10-18  Jason Merrill  <jason@redhat.com>
+
+	PR c++/50531
+	* g++.dg/cpp0x/defaulted32.C: New.
+
 2011-10-17  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/47023
