@@ -1,3 +1,9 @@
+2011-10-18  Jason Merrill  <jason@redhat.com>
+
+	PR c++/50531
+	* pt.c (instantiate_decl): Recognize when a function defaulted
+	outside the class is already instantiated.
+
 2011-10-15  Nicola Pero  <nicola.pero@meta-innovation.com>
 
 	Backport from mainline
